tests/parsing/smtlib/v2.6/errors/081_define-fun-rec_bad_name_1.expected
File "tests/parsing/smtlib/v2.6/errors/081_define-fun-rec_bad_name_1.smt2", line 2, character 16-17:
2 | (define-fun-rec _)
                    ^
Error while parsing a recursive function definition,
      read the reserved word '_',
      but expected a symbol for the function's name.
